# hello-wasm

./: readme.md
assembly-script/: package-lock.json  package.json  readme.md
blazor-wasm/: Program.cs  _Imports.razor  blazor-wasm.csproj  readme.md
blazor-wasm/Pages/: Counter.razor
blazor-wasm/Properties/: launchSettings.json
blazor-wasm/Shared/: NavMenu.razor
blazor-wasm/wwwroot/: index.html
go/: build.sh  main.go  main.wasm  readme.md
go/scripts/: go-hello-world.js
rust/: Cargo.toml  readme.md
wasm-hello/: .git - Shortcut.lnk  README.md  package-lock.json  package.json
wasm-hello/src/: app.controller.ts  app.module.ts  main.ts
wasm-hello/src/views/: assembly-script.hbs  go.hbs  rust.hbs
